<resources>
    <string name="app_name">LApp</string>
    <string name="splash_text_1">happn</string>
    <string name="title">L App</string>
    <string name="for_love_birds">For Birds</string>
    <string name="join_now">Join Now</string>
    <string name="sign_in">Sign In</string>
    <string name="find_the_people_you_crossed_path_with">Find the people you have crossed path with</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="by_clicking_join_now_you_agree_to_our_terms_and_policy">By Clicking Join Now You Agree To Our Terms And Policy You May Get Notifications.Learn More</string>
    <string name="learn_more">Learn More</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign In.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="my_partner">My MyPartner</string>
    <string name="faq">FAQ</string>
    <string name="share_app">Share</string>
    <string name="rate_app">Rate</string>
    <string name="contact">Contact</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="name">Name</string>
    <string name="member_since">Member Since</string>
    <string name="date_of_join">Date Of Joining</string>
    <string name="user_type">User Type</string>
    <string name="change">CHANGE</string>
    <string name="phone">Phone</string>
    <string name="feedback">Feedback</string>
</resources>
