<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhirawat.lapp.ui.PreActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        android:textColor="@color/md_white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTitlebelowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_layout"
        android:text="@string/for_love_birds"
        android:textColor="@color/md_white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitlebelowText"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnJoinNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout"
            android:background="@drawable/button_shape"
            android:text="@string/join_now"
            android:onClick="Join"
            android:textColor="@color/md_white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout"
            android:background="@drawable/button_shape"
            android:text="@string/sign_in"
            android:textColor="@color/md_white"
            android:onClick="Sign"
            />
    </LinearLayout>

</RelativeLayout>
