<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhirawat.lapp.ui.MyAccountActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/appStyle"
            app:title="@string/my_account"
            app:titleTextColor="@color/md_white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_black" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_layout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/name"
                    android:textColor="@color/md_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/name"
                    android:textColor="@color/md_black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear1"
                android:layout_margin="@dimen/margin_layout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMemberSinceLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/member_since"
                    android:textColor="@color/md_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMemberSinceValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/date_of_join"
                    android:textColor="@color/md_black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear2"
                android:layout_margin="@dimen/margin_layout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserTypeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_type"
                    android:textColor="@color/md_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvUserTypeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_type"
                    android:textColor="@color/md_black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear3"
                android:layout_margin="@dimen/margin_layout"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPasswordLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_small"
                        android:text="@string/password"
                        android:textColor="@color/md_black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPasswordChange"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_small"
                        android:text="@string/change"
                        android:textColor="@color/md_black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear4"
                android:layout_margin="@dimen/margin_layout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEmailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/prompt_email"
                    android:textColor="@color/md_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmailValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/prompt_email"
                    android:textColor="@color/md_black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear5"
                android:layout_margin="@dimen/margin_layout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPhoneLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/phone"
                    android:textColor="@color/md_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPhoneValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/phone"
                    android:textColor="@color/md_black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear6"
                android:layout_margin="@dimen/margin_layout"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFeedbackLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_small"
                        android:text="@string/feedback"
                        android:textColor="@color/md_black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvFeedbackIcon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_small"
                        android:textColor="@color/md_black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
